doc(user): document all currently implemented user routes
